# MedScript

./: .gitignore  .gitmodules  PHASE4_CHECKPOINT.md  README.md  local-store.sqlite3.bak-20260507T170145Z  store.sqlite3
.claude/: settings.json
.claude/hooks/: frontend-tests.sh  frontend-typecheck.sh  verify-all.sh
frontend-template/: .env.development  .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend-template/.claude/: settings.json
frontend-template/.claude/hooks/: check-artifacts.sh  run-affected-tests.sh  typecheck.sh
frontend-template/.claude/skills/frontend-pitfalls/: SKILL.md
frontend-template/.claude/skills/frontend-source-guide/: SKILL.md
frontend-template/.claude/skills/miden-concepts/: SKILL.md
frontend-template/.claude/skills/react-sdk-patterns/: SKILL.md
frontend-template/.claude/skills/signer-integration/: SKILL.md
frontend-template/.claude/skills/testing-patterns/: SKILL.md
frontend-template/.claude/skills/vite-wasm-setup/: SKILL.md
frontend-template/src/: App.tsx  config.ts  index.css  providers.tsx
frontend-template/src/__tests__/: phase6.test.tsx  phase7.test.tsx  phase8.test.tsx  phase9.test.tsx
frontend-template/src/__tests__/fixtures/: accounts.ts  index.ts  notes.ts
frontend-template/src/__tests__/mocks/: miden-sdk-react.ts
frontend-template/src/__tests__/patterns/: README.md  (+3 more)
frontend-template/src/components/: AppContent.css  AppContent.tsx  Counter.css  Counter.tsx
frontend-template/src/hooks/: useIncrementCounter.ts  useToast.ts  useWalletConnection.ts
frontend-template/src/lib/: miden.ts  workflowStorage.ts
frontend-template/src/pages/: connect.tsx
frontend-template/src/store/: doctorStore.ts  patientQueueStore.ts  prescriptionStore.ts  toastStore.ts  walletStore.ts
frontend-template/src/types/: index.ts
keystore/: 3556330450668751735  key_index.json
project-template/: .gitignore  CLAUDE.md  README.md
project-template/.claude/: settings.json
project-template/.claude/hooks/: build-contracts.sh
project-template/contracts/counter-account/: Cargo.toml
project-template/contracts/doctor-account/: Cargo.toml
project-template/contracts/fulfillment-note/: Cargo.toml
project-template/contracts/fulfillment-note/src/: lib.rs
project-template/contracts/increment-note/: Cargo.toml
project-template/contracts/pharmacist-account/: Cargo.toml
project-template/contracts/pharmacist-account/src/: lib.rs
project-template/contracts/prescription-note/: Cargo.toml
project-template/contracts/prescription-note/src/: lib.rs
project-template/genesis-accounts/: faucet_miden.mac
project-template/integration/: Cargo.toml
project-template/integration/src/: helpers.rs
project-template/integration/tests/: counter_test.rs  medscript_tests.rs
tasks/: lessons.md  testnet-accounts.md  todo.md
(+30 files in other folders)
