[package]
name = "integration"
version = "0.1.0"
edition.workspace = true

[dependencies]
cargo-miden = { version = "0.7" }
miden-client = { version = "0.14", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "0.14", package = "miden-client-sqlite-store" }
miden-standards = { version = "0.14", default-features = false, features = ["testing"] }
miden-core = { version = "0.22" }
miden-testing = "0.14"
miden-mast-package = { version = "0.22", default-features = false }
miden-protocol = "0.14"
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand = { version = "0.9" }
anyhow = "1.0"
